# langchain-mcp-adapters

./: .pdm-python  FASTMCP2_INTEGRATION.md  FASTMCP_INTEGRATION.md  FASTMCP_INTEGRATION_SUMMARY.md  FASTMCP_V2_INTEGRATION.md  FASTMCP_V2_INTEGRATION_COMPLETE.md  Makefile  README.md  demo_fastmcp_integration.py  demo_fastmcp_v2_integration.py  issue-417-design.zh.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: _lint.yml  (+3 more)
examples/: agentbase_shared_memory.md  agentscrape_x402_example.py  chart_library_finance.py  fastmcp2_integration_example.py  fastmcp2_math_server.py  fastmcp_integration.py  fastmcp_math_server.py  fastmcp_v2_integration_example.py  fastmcp_v2_math_server.py  interceptors_example.py  langgraph_fastmcp_example.py  ragflow_example.py  stateful_playwright_example.py  trust_gate_example.py
examples/agents/decision-anchor/: README.md  pyproject.toml
examples/agents/decision-anchor/decision_anchor_agent/: __init__.py  __main__.py  agent.py
examples/clients/algovault/: README.md  pyproject.toml
examples/clients/algovault/algovault_mcp_client/: __init__.py  main.py
langchain_mcp_adapters/: __init__.py  auth.py  callbacks.py  client.py  elicitation.py  fastmcp2_client.py  fastmcp_adapter.py  fastmcp_client.py  fastmcp_v2_adapter.py  fastmcp_v2_client.py  hooks.py  interceptors.py  langgraph_prompt.py  lifecycle.py  middleware.py  prompt_binder.py  prompts.py  resources.py  server_info.py  sessions.py  streamable_http_sigv4.py  tools.py  trust_gate.py  xml_lala.py
tests/: conftest.py  test_auth.py  test_callbacks.py  test_client.py  test_client_hooks.py  test_elicitation.py  test_fastmcp2_integration.py  test_fastmcp_integration.py  test_fastmcp_v2_integration.py  test_health_check.py  test_hooks.py  test_import.py  test_inmemory.py  test_interceptor_types.py  test_interceptors.py  test_langgraph_prompt.py  test_prompt_binder.py  test_prompts.py  test_resources.py  test_server_info.py  test_sessions.py  test_streamable_http_sigv4.py  test_task_execution.py  test_tasks.py  test_tools.py  test_trust_gate.py  utils.py
(+20 files in other folders)
