[project]
name = "algovault-mcp-client"
version = "0.1.0"
description = "Client example using langchain-mcp-adapters against the public AlgoVault MCP server (streamable HTTP)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AlgoVault Labs" }]
keywords = ["mcp", "langchain", "langgraph", "algovault", "streamable-http", "client", "trading"]
license = { text = "MIT" }
dependencies = [
    "langchain-mcp-adapters>=0.2.2",
    "mcp>=1.9.2",
]

[project.optional-dependencies]
agent = [
    "langgraph>=0.6.10",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.21",
]

[project.scripts]
algovault-mcp-client = "algovault_mcp_client.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["algovault_mcp_client"]

[tool.pyright]
include = ["algovault_mcp_client"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
